   * Add elm_fileselector_hidden_visible_set/get() to show or hide hidden files/directories.
   * Add signals "spinner,drag,start" and "spinner,drag,stop" to the spinner widget.
   * Add support for "clicked" callback on Return/space/KP_Enter key press for image.
   * Add elm_slider_step_get(), elm_slider_step_set() for slider.
   * Add support elm_popup_move() for popup.
   * Add multi select mode for genlist/gengrid.

Improvements:

   * Slider : Show popup on left/right/up/down key down press and hide on left/right/up/down key up press.
   * Default theme is now dark (matching Enlightenment).
   * Toolbar widget is now a scrollable widget.
   * Entry widget is now a scrollable layout.
   * Fileselector entry widget is now an elm layout.
   * Ctxpopup widget is now an elm layout.
   * Multibutton entry entry is now an elm layout.
   * Popup widget is now an elm layout.
   * Panel widget is now an elm layout.
   * Improve elm map module loading/searching efficiency.
   * Diskselector handles dyanmic show/hide of icons now like buttons.
   * Plug widget handles image object deletion
   * Handle COMPOUND_TEXT cnp
   * Conformant widget handles displaymode change related with keypad.
   * Conformant widget handles indicator service.
   * Elm_Transit image animation effects supports elm_image object type.
   * Include a main menu in elm_win, which can be exported via D-Bus.
   * Merged the file_entry and the path_entry in the fileselector and allowing typing the path.
   * Setting the same font size of the others widgets for the dayselector.
   * Added a separated spinner for year on calendar.
   * Don't link anymore with E_DBus at build time.
   * Allocate conformant part dummy objects only when the swallow parts are
   existed actually. since these parts are really dependent on the platform,
   in most case they don't need all parts at the same time.
   * Enhanced diskselector add and item_append time.